# cgr_verify_provenance

./: .gitignore  LICENSE  Makefile  PREREQUISITES.md  README.md  pyproject.toml  verify_provenance.py
tests/: __init__.py  test_verify_provenance.py
