[project]
name = "verify-provenance"
version = "0.1.0"
description = "Verify Chainguard image provenance and delivery authenticity"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Mike Barretta", email = "mike.barretta@chainguard.dev" }
]
keywords = ["chainguard", "sigstore", "cosign", "provenance", "supply-chain"]

[project.scripts]
verify-provenance = "verify_provenance:main"

[project.urls]
Homepage = "https://github.com/mbarretta/verify-provenance"
Documentation = "https://github.com/mbarretta/verify-provenance#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
